--- a/templates/index.html
+++ b/templates/index.html
@@ -56,17 +56,17 @@
 </head>
 <body>
     <div class="left-bar">
-        <div class="sellerList">
-            <div class="sellerList-header">
-                <div class="sellerList-header-name"> 
+        <div class="SellerList">
+            <div class="SellerList-header">
+                <div class="SellerList-header-name"> 
                     <h2>Seller List</h2>
                 </div>
     
-                <div class="sellerList-header-timer">
+                <div class="SellerList-header-timer">
                     <h3 id="startTimer"></h3>
                 </div>
             </div>
-            <div class="sellerList-sellers">
+            <div class="SellerList-sellers">
                 <ul id="sellerList">
                     <!-- Items will be dynamically added here -->
                 </ul>
