--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
                 </ul>
             </div>
         </div>
-        <button id="refreshSellerList">Refresh List</button>  <!-- Button to trigger custom event -->
+        <button id="refreshSellerList">Refresh List</button>
     </div>
     <div class="main-container">
 
