--- a/static/css/index-left-bar.css
+++ b/static/css/index-left-bar.css
@@ -83,11 +83,11 @@
     background-color: #FCFCFD;
     border-radius: 4px;
     border-width: 0;
-    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
     box-sizing: border-box;
     color: #36395A;
     cursor: pointer;
-    display: flex; /* Changed from inline-flex to flex */
+    display: flex;
     font-family: "JetBrains Mono", monospace;
     height: 38px;
     justify-content: center;
@@ -95,7 +95,7 @@
     overflow: hidden;
     padding-left: 16px;
     padding-right: 16px;
-    text-align: center; /* Changed from left to center */
+    text-align: center;
     text-decoration: none;
     transition: box-shadow .15s, transform .15s;
     user-select: none;
@@ -105,7 +105,7 @@
     will-change: box-shadow, transform;
     font-size: 18px;
     width: 70%;
-    margin: 0 auto; /* Centers the button horizontally */
+    margin: 0 auto;
 }
 
 #refreshSellerList:focus {
