--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,7 @@
             </div>
         </div>
         <button id="refreshSellerList">Refresh List</button>
+        <img id="catGif" src="https://cdn.7tv.app/emote/6612730475ef6d87d686fca1/2x.webp" alt="GIF">
     </div>
     <div class="main-container">
 
