--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
                 </ul>
             </div>
         </div>
-        <button id="refreshSellerList">Refresh List</button>
+        <button id="buttonRefreshSellerList">Refresh List</button>
         <img id="catGif" src="https://cdn.7tv.app/emote/6612730475ef6d87d686fca1/2x.webp" alt="GIF">
     </div>
     <div class="main-container">
