--- a/static/css/index-right-bar.css
+++ b/static/css/index-right-bar.css
@@ -11,15 +11,11 @@
     background-color: var(--bg-dark-color-theme);
 }   
 
-.boolean-button-CPJ.true { background-color: #04AA6D; margin-bottom: 4px; color: var(--text-dark-color-theme); cursor: pointer; }
-.boolean-button-CPJ.false { background-color: #C41E3A; margin-bottom: 4px; color: var(--text-dark-color-theme); cursor: pointer; }
-.value-button-CPJ { background-color: #008CBA; margin-bottom: 4px; color: var(--text-dark-color-theme); cursor: pointer; }
-
 .hidden {
     display: none;
 }
 
-.toggle-button-CPJ {
+.show-buttons-CPJ {
     height: 20px; /* Adjust height as needed */
     width: auto;
     margin: 0px;
@@ -39,9 +35,14 @@
 
 
 }
-.toggle-button-CPJ:hover {
+
+.show-buttons-CPJ:hover {
     border-radius: 3px;
     border-width: 1px;
     border-color: #04AA6D;
     border-style: solid; /* Add border-style to ensure border appears */
 }
+
+.boolean-buttons-CPJ.true { background-color: #04AA6D; margin-bottom: 4px; color: var(--text-dark-color-theme); cursor: pointer; }
+.boolean-buttons-CPJ.false { background-color: #C41E3A; margin-bottom: 4px; color: var(--text-dark-color-theme); cursor: pointer; }
+.value-buttons-CPJ { background-color: #008CBA; margin-bottom: 4px; color: var(--text-dark-color-theme); cursor: pointer; }
