--- a/static/css/index-navbar.css
+++ b/static/css/index-navbar.css
@@ -1,15 +1,17 @@
-.right-bar {
-    grid-area: RightContainer;
+.navbar-area {
+    padding: 5px; 
     display: flex;
 }
 
-.right-block {
+.navbar-left {
     display: flex;
-    flex-direction: column; /* Make buttons display vertically */
-    padding: 10px;
-    padding-top: 30px;
-    background-color: var(--bg-dark-color-theme);
-}   
+    flex: 1;
+}
+
+.navbar-right {
+    display: flex;
+    justify-content: flex-end;
+}
 
 .hidden {
     display: none;
@@ -18,29 +20,22 @@
 .show-buttons-CPJ {
     height: 20px; /* Adjust height as needed */
     width: auto;
-    margin: 0px;
+    margin: 1px;
     padding: 3px;
     cursor: pointer;
-    position: absolute; /* Positions the button absolutely within the container */
-    top: 0px;          /* Distance from the top edge of the container */
-    right: 0px;        /* Distance from the right edge of the container */
-    display: flex;
-    align-items: center; /* Vertical centering */
-    justify-content: center; /* Horizontal centering */
-    text-align: center;
+
+
 
     background-color: var(--bg-dark-color-theme);
     color: var(--text-dark-color-theme);
     border: none; /* Ensure no border initially */
 
-
+    border: 1px solid transparent; /* Invisible border */
+    border-radius: 3px; /* Apply border-radius to match hover state */
 }
 
 .show-buttons-CPJ:hover {
-    border-radius: 3px;
-    border-width: 1px;
     border-color: #04AA6D;
-    border-style: solid; /* Add border-style to ensure border appears */
 }
 
 .boolean-buttons-CPJ.true { background-color: #04AA6D; margin-bottom: 4px; color: var(--text-dark-color-theme); cursor: pointer; }
