--- a/templates/index.html
+++ b/templates/index.html
@@ -49,6 +49,8 @@
             flex: 1;
         }
 
+
+
     </style>
 
     <!-- Import Socket.IO library from a CDN -->
@@ -88,7 +90,9 @@
             </div>
             <div class="navbar-right">
                 
-                <button class="show-buttons-CPJ" id="toggleButtonsShow_CPJ">Show Buttons</button>
+                <button class="navbarRightButtons" id="navbarRightButton3">containerR3</button>
+                <button class="navbarRightButtons" id="navbarRightButton2">containerR2</button>
+                <button class="navbarRightButtons" id="navbarRightButton1">show CPJ</button>
             </div>
         </div>
         <div class="content-area">
@@ -96,8 +100,9 @@
 
             </div>
             <div class="right-sidebar">
-
-                <div class="right-sidebar-CPJ hidden" id="toggleButtonsHide_CPJ"></div>
+                <div class="right-sidebar-content containerR" id="containerR1">Content for Container 1</div>
+                <div class="right-sidebar-content containerR" id="containerR2">Content for Container 2</div>
+                <div class="right-sidebar-content containerR" id="containerR3">Content for Container 3</div>
             </div> 
         </div>
 
