--- a/templates/index.html
+++ b/templates/index.html
@@ -90,8 +90,8 @@
             </div>
             <div class="navbar-right">
                 
-                <button class="navbarRightButtons" id="navbarRightButton3">containerR3</button>
-                <button class="navbarRightButtons" id="navbarRightButton2">containerR2</button>
+                <button class="navbarRightButtons hidden" id="navbarRightButton3">containerR3</button>
+                <button class="navbarRightButtons hidden" id="navbarRightButton2">containerR2</button>
                 <button class="navbarRightButtons" id="navbarRightButton1">show CPJ</button>
             </div>
         </div>
@@ -100,9 +100,9 @@
 
             </div>
             <div class="right-sidebar">
-                <div class="right-sidebar-content containerR" id="containerR1">Content for Container 1</div>
-                <div class="right-sidebar-content containerR" id="containerR2">Content for Container 2</div>
-                <div class="right-sidebar-content containerR" id="containerR3">Content for Container 3</div>
+                <div class="right-sidebar-content hidden containerR" id="containerR1">Content for Container 1</div>
+                <div class="right-sidebar-content hidden containerR" id="containerR2">Content for Container 2</div>
+                <div class="right-sidebar-content hidden containerR" id="containerR3">Content for Container 3</div>
             </div> 
         </div>
 
