--- a/static/css/index-left-sidebar.css
+++ b/static/css/index-left-sidebar.css
@@ -70,7 +70,8 @@
 
 /* CSS */
 /* CSS for #refreshSellerList */
-#buttonRefreshSellerList {
+#buttonRefreshSellerList,
+#buttonNewPrice {
     align-items: center;
     appearance: none;
     background-color: #FCFCFD;
@@ -101,16 +102,19 @@
     margin: 0 auto;
 }
 
-.buttonRefreshSellerList:focus {
+.buttonRefreshSellerList-focus:focus,
+.buttonNewPrice-focus:focus {
     box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
 }
 
-.buttonRefreshSellerList-hover:hover {
+.buttonRefreshSellerList-hover:hover,
+.buttonNewPrice-hover:hover {
     box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
     transform: translateY(-2px);
 }
 
-.buttonRefreshSellerList-active:active {
+.buttonRefreshSellerList-active:active,
+.buttonNewPrice-active:active {
     box-shadow: #D6D6E7 0 3px 7px inset;
     transform: translateY(2px);
 }
