--- a/templates/index.html
+++ b/templates/index.html
@@ -81,6 +81,7 @@
             </div>
         </div>
         <button id="buttonRefreshSellerList">Refresh List</button>
+        <button id="buttonNewPrice">New Price</button>
         <img id="catGif" src="https://cdn.7tv.app/emote/6612730475ef6d87d686fca1/2x.webp" alt="GIF">
     </div>
     <div class="main-container">
