--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,6 @@
                 <div class="SellerList-header-name"> 
                     <h2>Seller List</h2>
                 </div>
-    
                 <div class="SellerList-header-timer">
                     <h3 id="startTimer"></h3>
                 </div>
@@ -82,6 +81,8 @@
         </div>
         <button id="buttonRefreshSellerList">Refresh List</button>
         <button id="buttonNewPrice">New Price</button>
+        <button id="buttonOnline">Online</button>
+        <button id="buttonOffline">Offline</button>
         <img id="catGif" src="https://cdn.7tv.app/emote/6612730475ef6d87d686fca1/2x.webp" alt="GIF">
     </div>
     <div class="main-container">
